fix logowidth error, delete not required codes and add text overflow to hide extra text

--- a/client/src/layout/PageLayout/Header/style.module.scss
+++ b/client/src/layout/PageLayout/Header/style.module.scss
@@ -9,7 +9,7 @@ $logoWidth: 200px;
         width: $logoWidth;
 
         @include below(md) {
-            width: $logoWidth / 2;
+            width: calc($logoWidth / 2);
         }
     }
 }
